homework/reader/deployment.yaml
# reader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reader
  namespace: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reader
  template:
    metadata:
      labels:
        app: reader
    spec:
      containers:
      - name: reader
        image: purshottam72/reader:007
        ports:
        - containerPort: 5000  # API
        - containerPort: 8000  # Prometheus metrics
---
