homework/reader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reader-service
  namespace: foo
spec:
  selector:
    app: reader
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
