homework/reader/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reader-ingress
  namespace: foo
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reader-service
            port:
              number: 80
